Bundling all 3 artifacts

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -20,6 +20,9 @@ jobs:
     - name: Build bundles
       run: make init && make all
 
+    - name: Package the artifacts
+      run: zip dvote-js-bundle.zip dist/*.js
+        
     - name: Create Release
       id: create_release
       uses: actions/create-release@v1
@@ -38,29 +41,6 @@ jobs:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-        asset_path: ./dist/main.js
-        asset_name: main.js
+        asset_path: ./dvote-js-bundle.zip
+        asset_name: dvote-js-bundle.zip
         asset_content_type: text/javascript
-
-    # - name: Upload the voting bundle
-    #   id: upload-release-asset 
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-    #     asset_path: ./dist/voting.js
-    #     asset_name: voting.js
-    #     asset_content_type: text/javascript
-
-    # - name: Upload the census bundle
-    #   id: upload-release-asset 
-    #   uses: actions/upload-release-asset@v1
-    #   env:
-    #     GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-    #   with:
-    #     upload_url: ${{ steps.create_release.outputs.upload_url }} # This pulls from the CREATE RELEASE step above, referencing it's ID to get its outputs object, which include a `upload_url`. See this blog post for more info: https://jasonet.co/posts/new-features-of-github-actions/#passing-data-to-future-steps 
-    #     asset_path: ./dist/census.js
-    #     asset_name: census.js
-    #     asset_content_type: text/javascript
-
